# Vortex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
Assets/DamagedHelmet/: DamagedHelmet.gltf
Assets/Sponza/: Sponza.gltf  Sponza2.gltf
Configs/: config.json
Engine/: main.cpp
Engine/Core/: Event.cpp  Event.hpp
Engine/Core/Clock/: Clock.cpp  Clock.hpp  Timer.cpp  Timer.hpp
Engine/Core/Event/: Event.cpp  Event.hpp  EventBus.cpp  EventBus.hpp
Engine/Core/File/: FileSystem.cpp  FileSystem.hpp  JsonParser.cpp  JsonParser.hpp  PathResolver.cpp  PathResolver.hpp
Engine/Core/Input/: Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp
Engine/Core/Job/: Job.cpp  Job.hpp  JobScheduler.cpp  JobScheduler.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
Engine/Core/Log/: Logger.cpp  Logger.hpp
Engine/Launch/: Application.cpp  Application.hpp
Engine/Platform/: Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
Engine/Render/: Renderer.cpp  Renderer.hpp
Engine/Render/Graphics/: Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  Context.cpp  Context.hpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  Device.hpp  GBuffer.cpp  GBuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  Sync.cpp  Sync.hpp
Engine/Render/Passes/: BasePass.cpp  BasePass.hpp  ForwardPass.cpp  ForwardPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightingPass.cpp  LightingPass.hpp
Engine/Render/Paths/: BasePath.cpp  BasePath.hpp  DeferredPath.cpp  DeferredPath.hpp  ForwardPath.cpp  ForwardPath.hpp
Engine/Render/RHI/: GpuData.cpp  GpuData.hpp  GpuMaterial.cpp  GpuMaterial.hpp  GpuMesh.cpp  GpuMesh.hpp  GpuTexture.cpp  GpuTexture.hpp  RenderScene.cpp  RenderScene.hpp
Engine/Scene/: World.cpp  World.hpp
Engine/Scene/Assets/: AssetImporter.hpp
Engine/Scene/Behaviours/: CameraController.cpp  CameraController.hpp
Engine/Scene/Components/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp
Engine/Scene/Core/: Behaviour.cpp  Behaviour.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Node.cpp  Node.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
Engine/Scene/Resources/: Material.cpp  Material.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp
Engine/Subsystem/Asset/: AssetImporter.cpp
Engine/Utils/: AssetImporter.cpp  AssetImporter.hpp
Scripts/: compile_shaders.py  copy_resources.py
Shaders/: common.slang  default.slang  default.spv
Shaders/Deferred/: blinn_phong.slang  geometry.slang  oren_nayar.slang  pbr.slang
Shaders/Forward/: blinn_phong.slang  oren_nayar.slang  pbr.slang
